2011-08-31  Jeff Johnston  <jjohnstn@redhat.com>

	Bug #347703
	* src/org/eclipse/linuxtools/changelog/core/actions/PrepareChangeLogAction.java (outputMultipleEntryChangeLog): Ask
	for ChangeLog location at least once if one does not exist.

2011-08-26  Jeff Johnston  <jjohnstn@redhat.com>

	* src/org/eclipse/linuxtools/changelog/core/actions/PrepareChangeLogAction.java (extractSynchronizeModelInfo): 
	Create PatchFile using IResource.
	(getWorkspaceFile): Removed.
	(filterNonExistentFiles): Ditto.
	(guessFunctionNames): Fix to remove usage of FileStoreEditorInput which
	does not work with TextDocumentProvider.  Switch to use FileEditorInput and
	pass IResource from PatchFile.
	* src/org/eclipse/linuxtools/changelog/core/actions/PatchFileComparator.java (compare): Use
	resource paths to compare.
	* src/org/eclipse/linuxtools/changelog/core/actions/PatchFile.java (PatchFile): 
	Change constructor to take an IResource.
	(getPath): Fix to use IResource to get path.
	(equals): Compare resources rather than paths.

2011-08-24  Jeff Johnston  <jjohnstn@redhat.com>

	* build.properties: Add icons to binary.

2011-07-14  Jeff Johnston  <jjohnstn@redhat.com>

	Bug #336255
	2011-06-14  Chris Aniszczyk <caniszczyk@gmail.com>
	
	* META-INF/MANIFEST.MF: Modify dependencies to support EFS.
	* plugin.xml: Allow git team provider.
	* src/org/eclipse/linuxtools/changelog/core/actions/PrepareChangeLogAction.java (guessFunctionNames): Use
	EFS since egit files are not directly in workspace.

2011-07-13  Jeff Johnston  <jjohnstn@redhat.com>

	Bug #350593
	2011-06-28  Kiu Kwan Leung  <kleung@redhat.com>
	
	* src/org/eclipse/linuxtools/changelog/core/actions/PrepareChangeLogAction.java (outputMultipleEntryChangeLog): 
	Look for dirty ChangeLog.
	(extractSynchronizeModelInfo): Ditto.
	* src/org/eclipse/linuxtools/changelog/core/editors/ChangeLogEditor.java (isForceNewLogEntry): New method.
	(setForceNewLogEntry): Ditto. 